--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
     "enableDebug": true
   },
   "production": {
-    "apiBase": "https://api.wevesoft.com",
+    "apiBase": "http://dev.deallow.kr:8080",
     "apiTimeout": 15000,
     "enableDebug": false
   }
